Issue #5724: Fix cmath failures on Solaris 10.